--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,8 @@
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="icon" href="/favicon.ico" />
-  <title>React.js Boilerplate</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <title>Nicola React App</title>
 </head>
 
 <body>
